--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/repo.css">
-
 </head>
 
 <body class='body'>
@@ -24,9 +23,7 @@
         <input type="input" class="form__field" placeholder="Name" name="name" id='name_of_user' required />
         <label for="name" class="form__label"></label>
     </div>
-    <main id="mainuser">
-
-    </main>
+    <main id="mainuser"></main>
 </body>
 <script src="../js/index.js"></script>
 </html>
