--- a/src/pages/repository.html
+++ b/src/pages/repository.html
@@ -10,16 +10,13 @@
     <title>GitHub User Search</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/repo.css">
-
 </head>
 
 <body class='body'>
     <header class="toolbar">
         <h1 class="title">GitHub User Search</h1>
     </header>
-    <main id="mainrepo">
-
-    </main>
+    <main id="mainrepo"></main>
 </body>
 <script src="../js/repos.js"></script> 
 </html>
