--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,12 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     <title>GitHub User Search</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/repo.css">
 </head>
 
 <body class='body'>
@@ -25,20 +24,29 @@
     <main id="mainuser">
         <div class="conteudo" id="keyremove">
             <div class="user">
-                <div id="userid"></div>
-                <div class="user-follows" id="followsid"></div>
-                <div class="user-info" id="infoid"></div>
+                <img class="user-image" id="img">
+                <h2 class="user-name" id="name"></h2>
+                <div class="user-follows">
+                    <label class="user-followers" id="followers"></label>
+                    <label class="user-followings" id="followings"></label>
+                </div>
+                <div class="user-info">
+                    <p class="user-email" id="email"></p>
+                    <p class="user-bio" id="bio"></p>
+                </div>
             </div>
             <div class="repos" id="cellsid">
                 <div class="repos-title">
                     <h2 class='title-cell'>Repositorio</h2>
                     <h2 class='title-cell'>Link direto</h2>
                 </div>
+                <div class ="repos-cells" id="cells">
 
+                </div>
             </div>
         </div>
     </main>
 </body>
-<script src="../js/index.js"></script>
+<script src="../js/helper.js"></script>
 
 </html>
