refactoring index second step

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -40,13 +40,13 @@
                     <h2 class='title-cell'>Repositorio</h2>
                     <h2 class='title-cell'>Link direto</h2>
                 </div>
-                <div class ="repos-cells" id="cells">
+                <div class="repos-cells" id="cells">
 
                 </div>
             </div>
         </div>
     </main>
 </body>
-<script src="../js/helper.js"></script>
+<script src="../js/index.js"></script>
 
 </html>
