code cleanup and optimization

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -38,10 +38,14 @@
             <div class="repos" id="cellsid">
                 <div class="repos-title">
                     <h2 class='title-cell'>Repositorio</h2>
-                    <h2 class='title-cell'>Link direto</h2>
+                    <select class='select-cell' id="select-sort">
+                        <option value="stars" disabled selected>Ordenar por</option>
+                        <option value="stars">Estrelas</option>
+                        <option value="forks">Forks</option>
+                        <option value="updated">Atualização</option>
+                    </select>
                 </div>
                 <div class="repos-cells" id="cells">
-
                 </div>
             </div>
         </div>
