--- a/src/pages/repository.html
+++ b/src/pages/repository.html
@@ -16,6 +16,7 @@
     <header class="toolbar">
         <h1 class="title">GitHub User Search</h1>
     </header>
+    <button class="button-back" id="go-back"> voltar </button>
     <main id="mainrepo">
         <div class="repo-details">
             <div class="repo-owner">
