--- a/src/repository.html
+++ b/src/repository.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
     <title>GitHub User Search</title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/repo.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/repo.css">
 </head>
 
 <body class='body'>
@@ -38,6 +38,6 @@
         </div>
     </main>
 </body>
-<script src="../js/repos.js"></script>
+<script src="./js/repos.js"></script>
 
 </html>
