--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     <title>GitHub User Search</title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body class='body'>
@@ -51,6 +51,6 @@
         </div>
     </main>
 </body>
-<script src="../js/index.js"></script>
+<script src="./js/index.js"></script>
 
 </html>
